package  Fibonacci;

public interface FindFib {
    //method
    int calculateFib(int n);
}
